Added PDF Link and other minor features
Solved bug where improper information would serve to the local host by
deleting and retyping a character in the HTML. This seems to be an
ATOM bug. Also added link to GitHub and PDF where pdf opens in a new
window.

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="resume.pdf">
+                    <a class="btn btn-xl btn-outline-light" target="_blank" href="https://documentcloud.adobe.com/link/track?uri=urn:aaid:scds:US:a0c5e7dc-4b68-420a-984c-aa35919a9e8c">
                         <i class="fas fa-download mr-2"></i>
                         Resume
                     </a>
@@ -206,9 +206,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Location</h4>
                         <p class="lead mb-0">
-                            2215 John Daniel Drive
-                            <br />
-                            Clark, MO 65243
+                            Greater Seattle Area
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
