Added links to photos in modals
Each modal now contains a link to its respective project.

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                                         <div class="divider-custom-line"></div> -->
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="dist/assets/img/portfolio/zone.png" alt="" />
+                                    <a href="https://puleri.github.io/django-app-react/#/sign-up"><img class="img-fluid rounded mb-5" src="dist/assets/img/portfolio/zone.png" alt="Screetshot of zone, a scrum applicaiton for audio programmers" /></a>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">So you are building a game and it is your responsibility to program the music and audio effects. You want to label your ideas with time estimates, notes, deadlines, priority levels, and more. Zone says: "Hold my sparkling apple juice". We have your back.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
@@ -277,7 +277,7 @@
                                         <div class="divider-custom-line"></div> -->
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="dist/assets/img/portfolio/chat-room.png" alt="" />
+                                    <a target="_blank" href="https://mandeloreann.github.io/chat-room/#/"><img class="img-fluid rounded mb-5" src="dist/assets/img/portfolio/chat-room.png" alt="Version one of a chat-room application created my Matthew Puleri's team" /></a>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">A team project, this chat-room was equally a challenge with coding as it was with version control. My team nominated me SCRUM Lead and stand-ups were paramount. Specs-wise, this chat-room was built with React and Express.js on the backend.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
@@ -311,7 +311,7 @@
                                         <div class="divider-custom-line"></div> -->
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Lilypad.png" alt="" />
+                                    <a target="_blank" href="https://puleri.github.io/Lilypad-Client/"><img class="img-fluid rounded mb-5" src="assets/img/portfolio/Lilypad.png" alt="Version one of Lilypad, a note taking application" /></a>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">Lilypad is a note-taking application which allows users to find, update, and delete specific notes as well as create them. The uses for a code pattern like this are vast, however the goals for Lilypad are to evolve into a unique notes application which allows users to categorize notes. Similar to Spotify I would like to include reccomendations to shows if a user writes a note about an artist.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
@@ -345,7 +345,7 @@
                                         <div class="divider-custom-line"></div> -->
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/game.png" alt="" />
+                                    <a target="_blank" href="https://puleri.github.io/Tic-Tac-Toe/"><img class="img-fluid rounded mb-5" src="dist/assets/img/portfolio/tic-tac-toe.png" alt="Version one of a tic-tac-toe web application" /></a>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">My fledgling first application and a favorite childhood game: Tic-Tac-Toe. I have always loved games, and taking a peek under the hood to create my own basic game logic only further cemented my passion. Feel free to sign in with a guest account and give it a go.</p><br /><p> Email: guest@guest.demo Password:1</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
