Added accessibility for coding icons
Added the term "technologies" to the about section and moved
the icons to the new "technologies and experience" section.
Added labels to icons for added accessibility for those
unfamiliar with the icons.

--- a/index.html
+++ b/index.html
@@ -123,6 +123,42 @@
                     <div class="col-lg-12 ml-auto"><p class="lead">Results-oriented software engineering professional with expertise in building secure applications, RESTful API's, and scalable applications. Excellent team player with positive attitude. Passionate about creating dynamic applications with dynamic teams.</p></div>
                     <!-- <div class="col-lg-4 mr-auto"><p class="lead"></p></div> -->
                 </div>
+                <div class="profile-icons">
+                    <div class="row justify-content-center">
+                        <div class="col-4 col-md-6 col-lg-4 mb-5">
+                            <pre><small><label class="icon-label" for="fa-css3-alt">CSS</label></small></pre>
+                            <i class="profile-icons-space fab fa-css3-alt fa-5x"></i>
+                        </div>
+                        <div class="col-4 col-md-6 col-lg-4 mb-5">
+                            <pre><small><label class="icon-label"  for="fa-sass">SASS</label></small></pre>
+                            <i class="profile-icons-space fab fa-sass fa-5x"></i>
+                        </div>
+                        <div class="col-4 col-md-6 col-lg-4 mb-5">
+                            <pre><small><label class="icon-label"  for="fa-html5">HTML5</label></small></pre>
+                            <i class="profile-icons-space fab fa-html5 fa-5x"></i>
+                        </div>
+                        <div class="col-4 col-md-6 col-lg-4 mb-5">
+                            <pre><small><label class="icon-label"  for="fa-js-square">JavaScript</label></small></pre>
+                            <i class="profile-icons-space fab fa-js-square fa-5x"></i>
+                        </div>
+                        <div class="col-4 col-md-6 col-lg-4 mb-5">
+                            <pre><small><label class="icon-label"  for="fa-react">React</label></small></pre>
+                            <i class="profile-icons-space fab fa-react fa-5x"></i>
+                        </div>
+                        <div class="col-4 col-md-6 col-lg-4 mb-5">
+                            <pre><small><label class="icon-label"  for="fa-node-js">Node.js</label></small></pre>
+                            <i class="profile-icons-space fab fa-node-js fa-5x"></i>
+                        </div>
+                        <div class="col-4 col-md-6 col-lg-4 mb-5">
+                            <pre><small><label class="icon-label"  for="fa-git">Git</label></small></pre>
+                            <i class="profile-icons-space fab fa-git fa-5x"></i>
+                        </div>
+                        <div class="col-4 col-md-6 col-lg-4 mb-5">
+                            <pre><small><label class="icon-label"  for="fa-npm">npm</label></small></pre>
+                            <i class="profile-icons-space fab fa-npm fa-5x"></i>
+                        </div>
+                    </div>
+                </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
                     <a class="btn btn-xl btn-outline-light" target="_blank" href="https://documentcloud.adobe.com/link/track?uri=urn:aaid:scds:US:a0c5e7dc-4b68-420a-984c-aa35919a9e8c">
