--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Portfolio</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a></li>
+                        <!-- <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a></li> -->
                     </ul>
                 </div>
             </div>
@@ -41,8 +41,14 @@
         <!-- Masthead-->
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
-                <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="dist/assets/img/matt-puleri.jpeg" alt="" />
+                <div class="row">
+                    <div class="col-md-6 col-lg-6 col-sm-12 ml-auto">
+                        <!-- Masthead Avatar Image-->
+                        <img class="masthead-avatar mb-5" src="dist/assets/img/matt-puleri.jpeg" alt="" />
+                    </div>
+                    <div class="col-md-6 col-lg-6 col-sm-12 ml-auto"><br /><br /><br /><h4>Kindness and productivity go hand in hand. Together they make for great work and a great life.</h4><br />
+                    </div>
+                </div>
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Matthew Puleri</h1>
                 <!-- Icon Divider-->
@@ -120,7 +126,7 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-12 ml-auto"><p class="lead">Results-oriented software engineering professional with expertise in building secure applications, RESTful API's, and scalable applications. Excellent team player with positive attitude. Passionate about creating dynamic applications with dynamic teams.</p></div>
+                    <div class="col-lg-12 ml-auto"><p class="lead">A music student who studied in Music City, America: Matt applies his creativity to his coding. Results-oriented software engineering professional with expertise in building secure applications, RESTful API's, and scalable applications. Excellent team player with positive attitude. Passionate about creating dynamic applications with dynamic teams.</p></div>
                     <!-- <div class="col-lg-4 mr-auto"><p class="lead"></p></div> -->
                 </div>
                 <div class="profile-icons">
@@ -169,21 +175,21 @@
             </div>
         </section>
         <!-- Contact Section-->
-        <section class="page-section" id="contact">
-            <div class="container">
+        <!-- <section class="page-section" id="contact">
+            <div class="container"> -->
                 <!-- Contact Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>
+                <!-- <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2> -->
                 <!-- Icon Divider-->
-                <div class="divider-custom">
-                    <div class="divider-custom-line"></div>
+                <!-- <div class="divider-custom">
+                    <div class="divider-custom-line"></div> -->
                     <!-- <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div> -->
-                </div>
+                <!-- </div> -->
                 <!-- Contact Section Form-->
-                <div class="row">
-                    <div class="col-lg-8 mx-auto">
+                <!-- <div class="row">
+                    <div class="col-lg-8 mx-auto"> -->
                         <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19.-->
-                        <form id="contactForm" name="sentMessage" novalidate="novalidate">
+                        <!-- <form id="contactForm" name="sentMessage" novalidate="novalidate">
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
                                     <label>Name</label>
@@ -219,7 +225,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- Footer-->
         <footer class="footer text-center">
             <div class="container">
