--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="divider-custom-line"></div> -->
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Full-Stack Software Engineer | Musician | Athlete</p>
+                <p class="masthead-subheading font-weight-light mb-0">Full-Stack Software Engineer | Artist | Nerd</p>
             </div>
         </header>
         <!-- Portfolio Section-->
