Updated Project Links and Pictures

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                                         <div class="divider-custom-line"></div> -->
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <a href="https://puleri.github.io/django-app-react/#/sign-up"><img class="img-fluid rounded mb-5" src="dist/assets/img/portfolio/zone.png" alt="Screetshot of zone, a scrum applicaiton for audio programmers" /></a>
+                                    <a target="_blank" href="https://puleri.github.io/django-app-react/#/"><img class="img-fluid rounded mb-5" src="dist/assets/img/portfolio/zone.png" alt="Screetshot of zone, a scrum applicaiton for audio programmers" /></a>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">So you are building a game and it is your responsibility to program the music and audio effects. You want to label your ideas with time estimates, notes, deadlines, priority levels, and more. Zone says: "Hold my sparkling apple juice". We have your back.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
@@ -321,7 +321,7 @@
                                         <div class="divider-custom-line"></div> -->
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <a target="_blank" href="https://mandeloreann.github.io/chat-room/#/"><img class="img-fluid rounded mb-5" src="dist/assets/img/portfolio/chat-room.png" alt="Version one of a chat-room application created my Matthew Puleri's team" /></a>
+                                    <a target="_blank" href="https://puleri.github.io/crypto-mobile/"><img class="img-fluid rounded mb-5" src="dist/assets/img/portfolio/chat-room.png" alt="Version one of a chat-room application created my Matthew Puleri's team" /></a>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">A team project, this chat-room was equally a challenge with coding as it was with version control. My team nominated me SCRUM Lead and stand-ups were paramount. Specs-wise, this chat-room was built with React and Express.js on the backend.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
