About me update

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-12 ml-auto"><p class="lead">A music student who studied in Music City, America: Matt applies his creativity to his coding. Results-oriented software engineering professional with expertise in building secure applications, RESTful API's, and scalable applications. Excellent team player with positive attitude. Passionate about creating dynamic applications with dynamic teams.</p></div>
+                    <div class="col-lg-12 ml-auto"><p class="lead">A music student turned developer, I studied in Music City first and then remotely with Bellevue College and General Assembly. I apply creativity to coding. Through object-oriented development I have created 4+ web applications with RESTful API's and scalable design. I pride myself on being an excellent team player with a positive attitude. When I am not coding you can either find me playing pickleball with my partner, petting my cat, or exploring the Outlands in Apex Legends with my friends across the globe.</p></div>
                     <!-- <div class="col-lg-4 mr-auto"><p class="lead"></p></div> -->
                 </div>
                 <div class="profile-icons">
