Fixed memoji file path

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                         <i class="fas fa-download mr-2"></i>
                         My resume
                     </a>
-                    <img class="memoji" src="assets/img/memoji-smile.png" alt="memoji" />
+                    <img class="memoji" src="dist/assets/img/memoji-smile.png" alt="memoji" />
                 </div>
             </div>
         </section>
