--- a/index.html
+++ b/index.html
@@ -164,6 +164,14 @@
                             <pre><small><label class="icon-label"  for="fa-npm">npm</label></small></pre>
                             <i class="profile-icons-space fab fa-npm fa-5x"></i>
                         </div>
+                        <div class="col-4 col-md-6 col-lg-4 mb-5">
+                            <pre><small><label class="icon-label"  for="fa-npm">Python</label></small></pre>
+                            <i class="fab fa-python"></i>
+                        </div>
+                        <div class="col-4 col-md-6 col-lg-4 mb-5">
+                            <pre><small><label class="icon-label"  for="fa-npm">Bootstrap</label></small></pre>
+                            <i class="fab fa-bootstrap"></i>
+                        </div>
                     </div>
                 </div>
                 <!-- About Section Button-->
