--- a/index.html
+++ b/index.html
@@ -166,11 +166,11 @@
                         </div>
                         <div class="col-4 col-md-6 col-lg-4 mb-5">
                             <pre><small><label class="icon-label"  for="fa-npm">Python</label></small></pre>
-                            <i class="fab fa-python"></i>
+                            <i class="profile-icons-space fab fa-python fa-5x"></i>
                         </div>
                         <div class="col-4 col-md-6 col-lg-4 mb-5">
                             <pre><small><label class="icon-label"  for="fa-npm">Bootstrap</label></small></pre>
-                            <i class="fab fa-bootstrap"></i>
+                            <i class="profile-icons-space fab fa-bootstrap fa-5x"></i>
                         </div>
                     </div>
                 </div>
