--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <meta property="image" content="dist/assets/img/Portfolio-meta.png" />
+        <meta property="og:image" content="dist/assets/img/Portfolio-meta.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="Matthew's Portfolio. This site links my work and my story along with listing my skills." />
         <meta name="author" content="" />
