--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
         <meta name="author" content="" />
         <title>Matthew Puleri</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="dist/assets/img/favicon.ico" />
+        <link rel="apple-touch-icon" sizes="180x180" href="dist/assets/img/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="dist/assets/img/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="dist/assets/img/favicon-16x16.png">
+        <link rel="manifest" href="dist/assets/img/site.webmanifest">
+        <link rel="mask-icon" href="dist/assets/img/safari-pinned-tab.svg" color="#5bbad5">
+        <link rel="shortcut icon" href="dist/assets/img/favicon.ico">
+        <meta name="msapplication-TileColor" content="#c7e6ff">
+        <meta name="msapplication-config" content="dist/assets/img/browserconfig.xml">
+        <meta name="theme-color" content="#ffffff">
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
