Added link tag around ConnectTheDots Modal
New Modal is now clickable and will open the product up in
another tab.

--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                                         <div class="divider-custom-line"></div> -->
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="dist/assets/img/portfolio/ConnectTheDots.png" alt="" />
+                                    <a target="_blank" href="https://hack-a-thon-serv4.github.io/working-title/#/"><img class="img-fluid rounded mb-5" src="dist/assets/img/portfolio/ConnectTheDots.png" alt="" /></a>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">My first Hackathon entry, Connect The Dots is a applicaiton built to help students struggling in school transition back from the pandemic. The Hackathon prompt was to aide small businesses in their transition out of the pandemic, and we chose to help small tutoring companies.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
