Added Q-Clue, PHP, Go, and updated bio

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <!-- Masthead Avatar Image-->
                         <img class="masthead-avatar mb-5" src="dist/assets/img/matt-puleri.jpeg" alt="" />
                     </div>
-                    <div class="col-md-6 col-lg-6 col-sm-12 ml-auto"><br /><br /><br /><h4>Kindness and productivity go hand in hand. Together they make for great work and a great life.</h4><br />
+                    <div class="col-md-6 col-lg-6 col-sm-12 ml-auto"><br /><br /><br /><h4>Ready to create innovative tech solutions and clean websites that meet your design needs.</h4><br />
                     </div>
                 </div>
                 <!-- Icon Divider-->
@@ -85,12 +85,21 @@
                 <!-- Portfolio Grid Items-->
                 <div class="row justify-content-center">
                     <!-- Portfolio Item 1-->
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="dist/assets/img/portfolio/Q-Clue.png" alt="Clue" />
+                        </div>
+                    </div>
+                    <!-- 2 -->
                     <div class="col-md-6 col-lg-6 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="dist/assets/img/portfolio/ConnectTheDots.png" alt="Tic-tac-toe application" />
+                            <img class="img-fluid" src="dist/assets/img/portfolio/ConnectTheDots.png" alt="Connect the dots" />
                         </div>
                     </div>
                     <!-- Portfolio Item 1-->
@@ -99,7 +108,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="dist/assets/img/portfolio/Zone-picture.png" alt="Tic-tac-toe application" />
+                            <img class="img-fluid" src="dist/assets/img/portfolio/Zone-picture.png" alt="Zone" />
                         </div>
                     </div>
                     <!-- Portfolio Item 2-->
@@ -108,7 +117,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="dist/assets/img/portfolio/Whispers-picture.png" alt="" />
+                            <img class="img-fluid" src="dist/assets/img/portfolio/Whispers-picture.png" alt="Whispers" />
                         </div>
                     </div>
                     <!-- Portfolio Item 3-->
@@ -117,7 +126,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="dist/assets/img/portfolio/Lilypad-picture.png" alt="" />
+                            <img class="img-fluid" src="dist/assets/img/portfolio/Lilypad-picture.png" alt="Lilypad" />
                         </div>
                     </div>
                     <!-- Portfolio Item 4-->
@@ -126,7 +135,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="dist/assets/img/portfolio/Game-design-picture.png" alt="" />
+                            <img class="img-fluid" src="dist/assets/img/portfolio/Game-design-picture.png" alt="Tic-tac-toe" />
                         </div>
                     </div>
                 </div>
@@ -197,6 +206,18 @@
                         <div class="col-4 col-md-6 col-lg-4 mb-5">
                             <pre><small><label class="icon-label"  for="fa-npm">Atom</label></small></pre>
                             <i class="profile-icons-space fas fa-atom fa-5x"></i>
+                        </div>
+                        <div class="col-4 col-md-6 col-lg-4 mb-5">
+                            <pre><small><label class="icon-label"  for="fa-npm">Go</label></small></pre>
+                            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+width="50" height="50"
+viewBox="0 0 226 226"
+style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,226v-226h226v226z" fill="none"></path><g fill="#ffffff"><path d="M113,9.04c-0.15028,-0.0016 -0.30054,0.00429 -0.45023,0.01766c-16.34051,0.07748 -28.38638,4.21798 -36.34539,8.46617c-6.41878,3.42608 -8.42428,5.81446 -9.75508,7.15078c-2.44545,-0.96965 -4.85588,-2.07461 -7.6893,-2.07461c-12.42781,0 -22.6,10.17219 -22.6,22.6c0,9.16552 5.66238,16.80711 13.56,20.33117v42.40148l-11.57367,11.57367c-2.64872,2.64872 -2.64872,6.93862 0,9.58734c1.32436,1.32436 3.05799,1.98633 4.79367,1.98633c1.73568,0 3.46931,-0.66197 4.79367,-1.98633l0.7857,-0.7857c-0.31954,2.05264 -0.61607,4.0899 -0.98875,6.23266c-1.14136,6.56227 -2.33062,14.36826 -2.33062,28.17937c0,12.8256 6.09461,26.12792 17.33844,36.35422l-6.31211,6.31211c-2.64872,2.64872 -2.64872,6.93862 0,9.58734c1.32436,1.32436 3.05799,1.98633 4.79367,1.98633c1.73568,0 3.47383,-0.66197 4.79367,-1.98633l7.85703,-7.85703c10.44872,5.98867 23.5222,9.76078 38.93203,9.8257c0.02646,0.00318 0.05295,0.00612 0.07946,0.00883c0.1085,0.00037 0.20908,0.00883 0.31781,0.00883c0.15322,0.0019 0.30644,-0.00399 0.45906,-0.01766c15.38253,-0.07488 28.43556,-3.84515 38.87024,-9.8257l7.85703,7.85703c1.31984,1.32436 3.05799,1.98633 4.79367,1.98633c1.73568,0 3.46931,-0.66197 4.79367,-1.98633c2.64872,-2.64872 2.64872,-6.93862 0,-9.58734l-6.32094,-6.32094c11.23948,-10.22549 17.34727,-23.52258 17.34727,-36.34539c0,-13.81111 -1.18926,-21.6171 -2.33062,-28.17937c-0.37268,-2.14275 -0.66921,-4.18001 -0.98875,-6.23266l0.7857,0.7857c1.32436,1.32436 3.05799,1.98633 4.79367,1.98633c1.73568,0 3.46931,-0.66197 4.79367,-1.98633c2.64872,-2.64872 2.64872,-6.93862 0,-9.58734l-11.57367,-11.57367v-42.40148c7.89762,-3.52406 13.56,-11.16566 13.56,-20.33117c0,-12.42781 -10.17219,-22.6 -22.6,-22.6c-2.83342,0 -5.24385,1.10496 -7.6893,2.07461c-1.3308,-1.33632 -3.33629,-3.7247 -9.75508,-7.15078c-7.98116,-4.26001 -20.06779,-8.4201 -36.47781,-8.475c-0.1058,-0.00667 -0.2118,-0.00961 -0.31781,-0.00883zM113,18.08c15.06279,0 25.67906,3.75329 32.54047,7.41562c6.86141,3.66234 9.67562,6.94773 9.67562,6.94773c1.41565,1.61112 3.76853,2.00573 5.63234,0.94461c1.95363,-1.1134 4.07702,-1.74797 6.39156,-1.74797c7.54155,0 13.56,6.01845 13.56,13.56c0,6.35125 -4.3254,11.5835 -10.17,13.09211c-1.99321,0.51481 -3.38686,2.3113 -3.39,4.36992v50.33797c0,10.507 1.21199,16.66278 2.33062,23.09438c1.11864,6.4316 2.18938,13.31674 2.18938,26.62562c0,20.21498 -20.04771,45.2 -58.76,45.2c-38.71229,0 -58.76,-24.98502 -58.76,-45.2c0,-13.30889 1.07074,-20.19403 2.18937,-26.62562c1.11864,-6.4316 2.33062,-12.58737 2.33062,-23.09437v-50.33797c-0.00314,-2.05862 -1.39679,-3.85512 -3.39,-4.36992c-5.8446,-1.50861 -10.17,-6.74086 -10.17,-13.09211c0,-7.54155 6.01845,-13.56 13.56,-13.56c2.31454,0 4.43794,0.63457 6.39156,1.74797c1.86381,1.06112 4.2167,0.66651 5.63234,-0.94461c0,0 2.81421,-3.2854 9.67562,-6.94773c6.86141,-3.66234 17.47768,-7.41562 32.54047,-7.41562zM88.14,36.16c-11.17994,0 -20.34,9.16006 -20.34,20.34c0,11.17994 9.16006,20.34 20.34,20.34c11.17994,0 20.34,-9.16006 20.34,-20.34c0,-11.17994 -9.16006,-20.34 -20.34,-20.34zM137.85117,36.16883c-11.17744,0 -20.33117,9.15373 -20.33117,20.33117c0,11.17744 9.15373,20.33118 20.33117,20.33117c11.17744,0 20.34,-9.15374 20.34,-20.33117c0,-11.17744 -9.16256,-20.33117 -20.34,-20.33117zM58.76,40.68c-2.49504,0 -4.52,2.02496 -4.52,4.52c0,2.49504 2.02496,4.52 4.52,4.52c0.30736,0 0.57588,-0.1178 0.86516,-0.17656c0.60568,-2.47244 1.49499,-4.83951 2.68375,-7.02719c-0.82716,-1.08932 -2.07539,-1.83625 -3.54891,-1.83625zM167.24,40.68c-1.47352,0 -2.72175,0.74693 -3.54891,1.83625c1.18876,2.18768 2.07807,4.55475 2.68375,7.02719c0.28928,0.05876 0.5578,0.17656 0.86516,0.17656c2.49504,0 4.52,-2.02496 4.52,-4.52c0,-2.49504 -2.02496,-4.52 -4.52,-4.52zM88.14,45.2c6.29436,0 11.3,5.00564 11.3,11.3c0,6.29436 -5.00564,11.3 -11.3,11.3c-3.72638,0 -6.97056,-1.78243 -9.02234,-4.52c3.73759,-0.00973 6.76236,-3.04239 6.76234,-6.78c0.00001,-3.73761 -3.02475,-6.77027 -6.76234,-6.78c2.05178,-2.73757 5.29597,-4.52 9.02234,-4.52zM137.85117,45.20883c6.29186,0 11.3,4.99931 11.3,11.29117c0,6.29186 -5.00814,11.29117 -11.3,11.29117c-3.72436,0 -6.96373,-1.77661 -9.01352,-4.51117c3.73759,-0.00973 6.76236,-3.04239 6.76234,-6.78c0.00001,-3.73761 -3.02475,-6.77027 -6.76234,-6.78c2.04978,-2.73456 5.28915,-4.51117 9.01352,-4.51117zM113,72.32c-6.40465,0.00201 -11.93388,2.99118 -13.25984,7.16844c-1.36379,0.84149 -2.6562,1.79104 -3.77844,2.91328c-3.25275,3.25275 -5.56172,7.62161 -5.56172,12.51828c0,1.13 0.26053,5.66498 3.80492,8.76633c2.22196,1.94422 5.42376,3.25868 9.75508,4.02562v5.28805c-0.02305,1.63007 0.83338,3.14629 2.24135,3.96805c1.40797,0.82176 3.14934,0.82176 4.55731,0c1.40797,-0.82176 2.2644,-2.33798 2.24135,-3.96805c-0.02305,1.63007 0.83338,3.14629 2.24135,3.96805c1.40797,0.82176 3.14934,0.82176 4.55731,0c1.40797,-0.82176 2.2644,-2.33798 2.24135,-3.96805v-5.28805c4.33131,-0.76694 7.53312,-2.08141 9.75508,-4.02562c3.5444,-3.10135 3.80492,-7.63633 3.80492,-8.76633c0,-4.89667 -2.30897,-9.26553 -5.56172,-12.51828c-1.12402,-1.12402 -2.42097,-2.07099 -3.78726,-2.91328c-1.32527,-4.1751 -6.84968,-7.16366 -13.25102,-7.16844zM103.52742,87.81336c2.52935,1.65415 5.92941,2.58259 9.47258,2.58664c3.54436,-0.00015 6.94774,-0.92547 9.48141,-2.57781c0.40045,0.3018 0.80179,0.60757 1.16531,0.97109c1.83225,1.83225 2.91328,4.24339 2.91328,6.12672c0,1.13 0.26053,1.11502 -0.71508,1.96867c-0.9756,0.85365 -4.36992,2.55133 -12.84492,2.55133c-8.475,0 -11.86932,-1.69768 -12.84492,-2.55133c-0.9756,-0.85365 -0.71508,-0.83867 -0.71508,-1.96867c0,-1.88333 1.08103,-4.29447 2.91328,-6.12672c0.3665,-0.3665 0.77017,-0.67617 1.17414,-0.97992z"></path></g></g></svg>
+
+                        </div>
+                        <div class="col-4 col-md-6 col-lg-4 mb-5">
+                            <pre><small><label class="icon-label"  for="fa-npm">PHP</label></small></pre>
+                            <i class="profile-icons-space fab fa-php fa-5x"></i>
                         </div>
                     </div>
                 </div>
